cabal-version: 3.0

name: adventofcode2017
version: 0.1.0.0
author: rvLMdE7
build-type: Simple
license: BSD-3-Clause

license-file: LICENSE
extra-source-files: README.md
data-files: input/*.txt


common common-ghc-lib-options
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
        -fhide-source-paths

common common-lang-options
    default-language: Haskell2010
    default-extensions:
        , BinaryLiterals
        , ImportQualifiedPost
        , LambdaCase
        , NumericUnderscores
        , TypeApplications
        , QuasiQuotes

common common-lib-options
    import:
        , common-lang-options
        , common-ghc-lib-options
    build-depends:
        , base ^>=4.17
        , bytestring ^>=0.11.3
        , flow ^>=2.0
        , text ^>=2.0
        , vector ^>=0.13
        , filepath ^>=1.4.100

common common-runtime-options
    import:
        , common-lang-options
        , common-ghc-lib-options
    hs-source-dirs: run
    build-depends: base
    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N


library
    import: common-lib-options
    hs-source-dirs:
        , src/main
        , src/help
    other-modules: Paths_adventofcode2017
    exposed-modules:
        , Common
        , Common.Vector
        , Day01
        , Day02

library adventofcode2017-tests
    import: common-lib-options
    hs-source-dirs: spec
    build-depends:
        , adventofcode2017
        , tasty ^>=1.4.2.3
        , tasty-hunit ^>=0.10.0.3
    exposed-modules:
        , Test01
        , Test02


common common-exe-options
    import: common-runtime-options
    build-depends: adventofcode2017

executable day-01
    import: common-exe-options
    mixins: adventofcode2017 (Day01 as Day)
    main-is: Run.hs

executable day-02
    import: common-exe-options
    mixins: adventofcode2017 (Day02 as Day)
    main-is: Run.hs


common common-test-options
    import: common-runtime-options
    build-depends: adventofcode2017-tests

test-suite test-01
    import: common-test-options
    mixins: adventofcode2017-tests (Test01 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-02
    import: common-test-options
    mixins: adventofcode2017-tests (Test02 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0
